2022-02-11  Don Olmstead  <don.olmstead@sony.com>

        Allow structureHeapAddressSize to be set during build
        https://bugs.webkit.org/show_bug.cgi?id=236527

        Reviewed by Yusuke Suzuki.

        Add `STRUCTURE_HEAP_ADDRESS_SIZE_IN_MB` as a way to set the size of
        structureHeapAddressSize at build time. Set a default for the PlayStation port.

        * PlatformPlayStation.cmake:
        * runtime/JSCConfig.h:

2022-02-10  Keith Miller  <keith_miller@apple.com>

        tryReserveUncommittedAligned should explicitly take the alignment requested
        https://bugs.webkit.org/show_bug.cgi?id=236460

        Reviewed by Yusuke Suzuki.

        When reducing the size of VA space reserved for Structures, we
        didn't take care to ensure the alignment matched the required
        alignment for our bit mask. To fix this we need to pass the
        original alignment to the allocator as a new parameter.

        * heap/StructureAlignedMemoryAllocator.cpp:
        (JSC::StructureMemoryManager::StructureMemoryManager):

2022-01-24  Filip Pizlo  <fpizlo@apple.com>

        [libpas] jit_heap should support the segregated heap
        https://bugs.webkit.org/show_bug.cgi?id=235497

        Reviewed by Yusuke Suzuki.

        Disable the jit_heap segregated heap if the executable pool size is too small.

        * jit/ExecutableAllocator.cpp:
        (JSC::initializeJITPageReservation):

2022-02-09  Yusuke Suzuki  <ysuzuki@apple.com>

        Use local variable pointer for concurrently load value
        https://bugs.webkit.org/show_bug.cgi?id=236387

        Reviewed by Saam Barati.

        Consistently using local pointer to load member fields in

            1. WriteBarrierStructureID
            2. JSString's fiber
            3. Weak
            4. WriteBarrier<SomeKindOfCell>

        to encourage compilers not to load the field twice.

        * heap/Weak.cpp:
        (JSC::weakClearSlowCase):
        * heap/Weak.h: